menu position fixed on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ header {
 }
 
 /*------------------------------NAVBAR*/
+.navbar-nav {
+    margin-left: 5px;
+}
+
 .navbar-nav ul li {
     margin: 0px 5px;
     text-align: center;
